[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/LikesGenerator/NpcLikesLineUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/LikesGenerator/NpcLikesGenerator.gd" type="Script" id=2]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=3]
[ext_resource path="res://Themes/RichTextPretty1.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="NpcLikesGenerator" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 700.0
custom_constants/separation = 5

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_right = 487.0
margin_bottom = 680.0
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="Options" type="VBoxContainer" parent="HBoxContainer/ScrollContainer"]
margin_top = 10.0
margin_right = 487.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="NpcLikesLineUI" parent="HBoxContainer/ScrollContainer/Options" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 487.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="NpcLikesLineUI2" parent="HBoxContainer/ScrollContainer/Options" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 487.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 492.0
margin_right = 1280.0
margin_bottom = 680.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer2"]
margin_right = 788.0
margin_bottom = 649.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
wrap_enabled = true

[node name="ConvertBackButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 654.0
margin_right = 788.0
margin_bottom = 680.0
hint_tooltip = "Read likes/dislikes from text"
text = "Text->List"

[connection signal="onCurrentValueChange" from="HBoxContainer/ScrollContainer/Options/NpcLikesLineUI" to="." method="_on_NpcLikesLineUI_onCurrentValueChange"]
[connection signal="onCurrentValueChange" from="HBoxContainer/ScrollContainer/Options/NpcLikesLineUI2" to="." method="_on_NpcLikesLineUI_onCurrentValueChange"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/ConvertBackButton" to="." method="_on_ConvertBackButton_pressed"]
